build: resolve buf deps
Resolve buf dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 venv
 lib/java/src/
 lib/python/dist/
-lib/python/yoco/
-lib/python/yoco_models_py.egg-info/
+lib/python/sanctumlabs/
+lib/python/sanctamlabs_models_py.egg-info/
 .DS_Store
