--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,12 @@ cache:
     - ".cache"
 
 stages:
+  - lint
   - build
-  - deploy
+  - publish
 
 lint:
-  stage: build
+  stage: lint
   script:
     - buf format -d --exit-code
     - buf lint
@@ -29,6 +30,8 @@ lint:
 
 breaking:
   stage: build
+  needs:
+    - lint
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
   script:
@@ -36,6 +39,8 @@ breaking:
 
 generate:
   stage: build
+  needs:
+    - lint
   script:
     - buf generate
   artifacts:
@@ -44,7 +49,9 @@ generate:
     when: always
 
 push-buf-registry:
-  stage: deploy
+  stage: publish
+  needs:
+    - generate
   script:
     - echo ${BUF_API_TOKEN} | buf registry login --username ${BUF_USER} --token-stdin
     - buf push shared -t "${CI_COMMIT_TAG}"
@@ -54,19 +61,24 @@ push-buf-registry:
     - tags
 
 publish-python:
-  stage: deploy
+  stage: publish
   image: python:3.8
+  needs:
+    - push-buf-registry
   before_script:
     - bin/ci/pypi-setup.sh
   script:
     - cd lib/python
     - make publish-gitlab
+    - make publish-pypi
   only:
     - tags
 
 publish-java:
-  stage: deploy
+  stage: publish
   image: gradle:7.4-jdk8
+  needs:
+    - push-buf-registry
   before_script:
     - bin/ci/build-setup.sh
   script:
