--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,4 @@
-name: Publish Packages
+name: Publish
 
 on:
   workflow_run:
@@ -30,3 +30,29 @@ jobs:
         run: |
           cd lib/python
           make publish-pypi
+
+  publish-maven:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    name: Publish Java library
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      # reference : https://github.com/gradle/gradle-build-action
+      - name: Publish Packages
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: publish
+        env:
+#          until we have a maven central repository
+#          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+#          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          GH_PACKAGE_TOKEN: ${{ secrets.GH_PACKAGE_TOKEN }}
+          GH_RELEASE_ACTOR: ${{ secrets.GH_GITHUB_ACTOR }}
