--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ lib/java/src/
 lib/python/dist/
 lib/python/sanctumlabs/
 lib/python/sanctumlabs_models_py.egg-info
+*.egg-info
 lib/python/.venv/
 .DS_Store
