--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@
 *.iml
 venv
 .venv
-lib/java/src/
+lib/kotlin/src/
 lib/python/dist/
 lib/python/sanctumlabs/
 lib/python/sanctumlabs_models_py.egg-info
-*.egg-info
 lib/python/.venv/
+lib/go/sanctumlabs/
+lib/js/sanctumlabs/
+lib/js/node_modules
+node_modules/
+*.egg-info
 .DS_Store
