--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -4,7 +4,8 @@
   "description": "Shared data models for Sanctum Labs Platform",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "homepage": "https://gitlab.com/sanctumlabs/libraries/messagedefs#readme",
   "dependencies": {
     "google-protobuf": "^3.21.2"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
