--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "messagedefs",
+  "name": "@sanctumlabs/messagedefs",
   "version": "0.0.1",
   "description": "Shared data models for Sanctum Labs Platform",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --mode production"
@@ -12,7 +11,9 @@
     "url": "git+https://gitlab.com/sanctumlabs/libraries/messagedefs.git"
   },
   "keywords": [
-    "protobuf"
+    "protobuf",
+    "sanctumlabs",
+    "models"
   ],
   "author": "Brian Lusina",
   "license": "ISC",
@@ -22,8 +23,5 @@
   "homepage": "https://gitlab.com/sanctumlabs/libraries/messagedefs#readme",
   "dependencies": {
     "google-protobuf": "^3.21.2"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
   }
 }
