--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ lint:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: "$CI_COMMIT_BRANCH"
+    - if: "$CI_COMMIT_TAG"
 
 breaking:
   stage: build
@@ -48,6 +49,7 @@ generate:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
     - if: "$CI_COMMIT_BRANCH"
+    - if: "$CI_COMMIT_TAG"
 
 push-buf-registry:
   stage: publish
