--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "Shared data models for Sanctum Labs Platform",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
