--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,8 @@ publish-python:
   image: python:3.8
   needs:
     - push-buf-registry
+  dependencies:
+    - generate
   script:
     - cd lib/python
     - make publish-gitlab
@@ -79,10 +81,25 @@ publish-javascript:
   image: node:20.4.0
   needs:
     - push-buf-registry
+  dependencies:
+    - generate
   script:
     - cd lib/js
     - echo @sanctumlabs:registry=https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/>.npmrc
     - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}">.npmrc
     - make publish-gitlab
+  only:
+    - tags
+
+publish-maven:
+  stage: publish
+  image: gradle:7.4-jdk8
+  needs:
+    - push-buf-registry
+  dependencies:
+    - generate
+  script:
+    - cd lib/kotlin
+    - ./gradlew -Pversion="${CI_COMMIT_TAG}" publish
   only:
     - tags
