--- a/.github/workflows/buf_build.yaml
+++ b/.github/workflows/buf_build.yaml
@@ -1,19 +1,15 @@
 # This workflow will build a buf project
 # for more information view https://buf.build/docs/ci-cd/github-actions/
-name: Build
+# This is a re-useable workflow as specified here https://docs.github.com/en/actions/using-workflows/reusing-workflows
+# which triggers a buf build and archives the artifact for re-use by other jobs
+name: Buf Build
 
 on:
-  workflow_run:
-    workflows:
-      - "Lint"
-    types:
-      - completed
-    branches:
-      - main
+  workflow_call:
 
 jobs:
   build:
-    name: Buf generate
+    name: Buf Build
     runs-on: ubuntu-latest
 
     steps:
