--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,38 +1,55 @@
 name: Publish
 
 on:
-  workflow_run:
-    workflows:
-      - "Build"
-    types:
-      - completed
+  push:
+    tags:
+      # reference: https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#patterns-to-match-branches-and-tags    
+      - '**' # Push events to every tag including hierarchical tags like v1.0/beta
+  # TODO: set this to also run on as there will be instances where a merge request triggers this workflow to run when the Build workflow is 
+  # completed, as a result, it would be useful to set this to run as well
+  # workflow_run:
+  #   workflows:
+  #     - "Build"
+  #   types:
+  #     - completed
 
 permissions:
   contents: read
   pull-requests: read
 
 jobs:
+  buf-build:
+    uses: ./.github/workflows/buf_build.yaml
+  
   publish-pypi:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # TODO: uncomment this when the above 'workflow_run' is handled
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    needs: buf-build
     name: Publish Python package
     permissions: write-all
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      
+      # TODO: uncomment this when the above 'workflow_run' is handled
       # The lib artifact is downloaded from the build workflow as it is archived as an artifact there.
       # since these are 2 different workflows, currently, Github Actions does not allow downloading artifacts
       # from 2 different workflows. Therefore, this action allows downloading those artifacts to use in a different
       # workflow
       # Ref: https://github.com/dawidd6/action-download-artifact
-      - name: Download build artifact
-        id: download-artifact
-        uses: dawidd6/action-download-artifact@v2
+      # - name: Download build artifact
+      #   id: download-artifact
+      #   uses: dawidd6/action-download-artifact@v2
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     workflow: ${{ github.event.workflow_run.workflow_id }}          
+      #     name: lib
+
+      - name: Download lib artifact
+        uses: actions/download-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: ${{ github.event.workflow_run.workflow_id }}          
           name: lib
 
       - name: Publish
@@ -43,15 +60,22 @@ jobs:
           make publish-pypi
 
   publish-npm-github:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # TODO: uncomment this when the above 'workflow_run' is handled
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Publish Github NPM package
+    needs: buf-build
     permissions: write-all
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
+      - name: Download lib artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: lib
+
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
@@ -59,19 +83,20 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           # Defaults to the user or organization that owns the workflow file
           scope: '@sanctumlabs'
-
+      
+      # TODO: uncomment this when the above 'workflow_run' is handled
       # The lib artifact is downloaded from the build workflow as it is archived as an artifact there.
       # since these are 2 different workflows, currently, Github Actions does not allow downloading artifacts
       # from 2 different workflows. Therefore, this action allows downloading those artifacts to use in a different
       # workflow
       # Ref: https://github.com/dawidd6/action-download-artifact
-      - name: Download build artifact
-        id: download-artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: ${{ github.event.workflow_run.workflow_id }}          
-          name: lib
+      # - name: Download build artifact
+      #   id: download-artifact
+      #   uses: dawidd6/action-download-artifact@v2
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     workflow: ${{ github.event.workflow_run.workflow_id }}          
+      #     name: lib
 
       - run: |
           cd lib/js
@@ -84,8 +109,10 @@ jobs:
           npm publish
 
   publish-npm-registry:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # TODO: uncomment this when the above 'workflow_run' is handled
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    needs: buf-build
     name: Publish NPM package
     permissions: write-all
 
@@ -93,6 +120,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
+      - name: Download lib artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: lib
+
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
@@ -100,19 +132,20 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           # Defaults to the user or organization that owns the workflow file
           scope: '@sanctumlabs'
-
+      
+      # TODO: uncomment this when the above 'workflow_run' is handled
       # The lib artifact is downloaded from the build workflow as it is archived as an artifact there.
       # since these are 2 different workflows, currently, Github Actions does not allow downloading artifacts
       # from 2 different workflows. Therefore, this action allows downloading those artifacts to use in a different
       # workflow
       # Ref: https://github.com/dawidd6/action-download-artifact
-      - name: Download build artifact
-        id: download-artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: ${{ github.event.workflow_run.workflow_id }}          
-          name: lib
+      # - name: Download build artifact
+      #   id: download-artifact
+      #   uses: dawidd6/action-download-artifact@v2
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     workflow: ${{ github.event.workflow_run.workflow_id }}          
+      #     name: lib
 
       - run: |
           cd lib/js
@@ -125,14 +158,21 @@ jobs:
           npm publish
 
   publish-maven:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # TODO: uncomment this when the above 'workflow_run' is handled
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     name: Publish Kotlin library
     permissions: write-all
+    needs: buf-build
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Download lib artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: lib
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -140,18 +180,19 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      # TODO: uncomment this when the above 'workflow_run' is handled
       # The lib artifact is downloaded from the build workflow as it is archived as an artifact there.
       # since these are 2 different workflows, currently, Github Actions does not allow downloading artifacts
       # from 2 different workflows. Therefore, this action allows downloading those artifacts to use in a different
       # workflow
       # Ref: https://github.com/dawidd6/action-download-artifact
-      - name: Download build artifact
-        id: download-artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          workflow: ${{ github.event.workflow_run.workflow_id }}          
-          name: lib
+      # - name: Download build artifact
+      #   id: download-artifact
+      #   uses: dawidd6/action-download-artifact@v2
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     workflow: ${{ github.event.workflow_run.workflow_id }}          
+      #     name: lib
 
       # reference : https://github.com/gradle/gradle-build-action
       - name: Publish Packages
