ci(release): remove github plugin

--- a/.releaserc
+++ b/.releaserc
@@ -6,10 +6,9 @@
             "prerelease": true
         }
     ],
-    "tagFormat": "v${version}",
+    "tagFormat": "${version}",
     "plugins": [
         "@semantic-release/commit-analyzer",
-        "@semantic-release/release-notes-generator",
-        "@semantic-release/github"
+        "@semantic-release/release-notes-generator"
     ]
 }
