ci(gitlab): release job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,14 +68,14 @@ release:
   stage: publish
   needs:
     - generate
-  image: node:12
+  image: node:12-buster-slim
   variables:
     GITLAB_TOKEN: ${CI_JOB_TOKEN}
   before_script:
     - apt-get update && apt-get install -y --no-install-recommends git-core ca-certificates
     - npm install -g semantic-release @semantic-release/gitlab
   script:
-    - npx semantic-release
+    - semantic-release
   only:
     - main
   when: manual
