--- a/.releaserc
+++ b/.releaserc
@@ -9,6 +9,19 @@
     "tagFormat": "${version}",
     "plugins": [
         "@semantic-release/commit-analyzer",
-        "@semantic-release/release-notes-generator"
+        "@semantic-release/release-notes-generator",
+        [
+            "@semantic-release/changelog",
+            {
+              "changelogFile": "docs/CHANGELOG.md"
+            }
+        ],
+        [
+            "@semantic-release/git",
+            {
+              "assets": ["docs/CHANGELOG.md"],
+              "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+            }
+        ]
     ]
 }
