--- a/shared/buf.yaml
+++ b/shared/buf.yaml
@@ -1,5 +1,5 @@
 version: v1
-name: buf.build/sanctumlab/shared
+name: buf.build/sanctumlabs/shared
 deps:
   - buf.build/envoyproxy/protoc-gen-validate
 breaking:
