--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@sanctumlabs/messageschema",
   "version": "0.0.1",
-  "description": "Shared data models for Sanctum Labs Platform",
+  "description": "Shared message schemas for Sanctum Labs Platform",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
