refactor(events): change eventing name

--- a/events/buf.yaml
+++ b/events/buf.yaml
@@ -1,7 +1,8 @@
 version: v1
-name: buf.build/sanctumlabs/eventing
+name: buf.build/sanctumlabs/events
 deps:
   - buf.build/sanctumlabs/shared
+  - buf.build/envoyproxy/protoc-gen-validate
 breaking:
   use:
     - FILE
