--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,7 +99,7 @@ push-buf-registry:
     - buf generate
     - echo ${BUF_API_TOKEN} | buf registry login --username ${BUF_USER} --token-stdin
     - buf push shared -t "${CI_COMMIT_TAG}"
-    - buf push eventing -t "${CI_COMMIT_TAG}"
+    - buf push events -t "${CI_COMMIT_TAG}"
     - buf push transport -t "${CI_COMMIT_TAG}"
   only:
     - tags
