--- a/lib/kotlin/gradle.properties
+++ b/lib/kotlin/gradle.properties
@@ -1,1 +1,5 @@
-version = 0.1.0-SNAPSHOT
+version = 0.0.1
+gitLabTokenName=Private-Token
+gitLabPrivateToken=glpat-jMqM7L7dExkyUzi6xXgu
+gitlabGroupID=8512264
+gitlabProjectID=47231151
