ci: npm publishing
Split publishing of packages to different workflows on Github.
Set to release NPM tag with specified Commit Tag

--- a/.releaserc
+++ b/.releaserc
@@ -22,6 +22,13 @@
               "assets": ["docs/CHANGELOG.md"],
               "message": "chore(release): releasing ${nextRelease.version} \n\n${nextRelease.notes}"
             }
+        ],
+        [
+            "@semantic-release/npm",
+            {
+                "npmPublish": false,
+                "pkgRoot": "./lib/js"
+            }
         ]
     ]
 }
