--- a/.github/workflows/publish_npm.yaml
+++ b/.github/workflows/publish_npm.yaml
@@ -47,7 +47,8 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
         run: |
           cd lib/js
-          npm publish --tag ${{ github.ref_name }}
+          npm version ${{ github.ref_name }}
+          npm publish
 
   publish-npm-registry:
     runs-on: ubuntu-latest
@@ -80,4 +81,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}      
         run: |
           cd lib/js
-          npm publish --tag ${{ github.ref_name }}
+          npm version ${{ github.ref_name }}
+          npm publish
