--- a/.github/workflows/publish_maven.yaml
+++ b/.github/workflows/publish_maven.yaml
@@ -11,23 +11,20 @@ permissions:
   pull-requests: read
 
 jobs:
-  buf-build:
-    uses: ./.github/workflows/buf_build.yaml
-
   publish-maven:
     runs-on: ubuntu-latest
     name: Publish Kotlin library
     permissions: write-all
-    needs: buf-build
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Download lib artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lib
+      - name: Buf Setup
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate
+        run: buf generate
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
