--- a/.github/workflows/publish_npm.yaml
+++ b/.github/workflows/publish_npm.yaml
@@ -13,23 +13,20 @@ permissions:
   id-token: write # to enable use of OIDC for npm provenance
 
 jobs:
-  buf-build:
-    uses: ./.github/workflows/buf_build.yaml
-
   publish-npm-github:
     runs-on: ubuntu-latest
     name: Publish Github NPM package
-    needs: buf-build
     permissions: write-all
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download lib artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lib
+      - name: Buf Setup
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate
+        run: buf generate
 
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
@@ -52,7 +49,6 @@ jobs:
 
   publish-npm-registry:
     runs-on: ubuntu-latest
-    needs: buf-build
     name: Publish NPM package
     permissions: write-all
 
@@ -60,10 +56,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: Download lib artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lib
+      - name: Buf Setup
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate
+        run: buf generate
 
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
