--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -10,13 +10,9 @@ permissions:
   contents: read
   pull-requests: read
 
-jobs:
-  buf-build:
-    uses: ./.github/workflows/buf_build.yaml
-  
+jobs:  
   publish-pypi:
     runs-on: ubuntu-latest
-    needs: buf-build
     name: Publish Python package
     permissions: write-all
 
@@ -24,10 +20,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download lib artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: lib
+      - name: Buf Setup
+        uses: bufbuild/buf-setup-action@v1
+
+      - name: Generate
+        run: buf generate
+
 
       - name: Publish
         env:
