--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   release:
-    uses: SanctumLabs/ci-workflows/.github/workflows/release.yml
+    uses: SanctumLabs/ci-workflows/.github/workflows/release.yml@main
     with:
         name: ${{ github.ref }}
-        tag: ${{ github.ref }} 
+        tag_name: ${{ github.ref }} 
