--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,12 +68,18 @@ generate:
 push-buf-registry:
   stage: package
   script:
+    - echo ${BUF_API_TOKEN} | buf registry login --username ${BUF_USER} --token-stdin
+    - cd shared
+    - buf mod update
+    - buf push shared -t "${CI_COMMIT_TAG}"
+    - cd .. && cd events
+    - buf mod update
+    - buf push events -t "${CI_COMMIT_TAG}"
+    - cd .. && cd messages
+    - buf mod update
+    - buf push messages -t "${CI_COMMIT_TAG}"
     # Generate the libraries, these will be passed on to the next jobs in the pipeline
     - buf generate
-    - echo ${BUF_API_TOKEN} | buf registry login --username ${BUF_USER} --token-stdin
-    - buf push shared -t "${CI_COMMIT_TAG}"
-    - buf push events -t "${CI_COMMIT_TAG}"
-    - buf push messages -t "${CI_COMMIT_TAG}"
   only:
     - tags
 
