ci(github): publish workflows
Update Maven & PyPI Publish workflows to include version.

--- a/.github/workflows/publish_pypi.yaml
+++ b/.github/workflows/publish_pypi.yaml
@@ -26,10 +26,11 @@ jobs:
       - name: Generate
         run: buf generate
 
-
       - name: Publish
         env:
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}      
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+          PACKAGE_VERSION: ${{ github.ref_name }}
         run: |
+          echo Releasing PyPI Package verion ${{ github.ref_name }}
           cd lib/python
           make publish-pypi
