--- a/.github/workflows/publish_maven.yaml
+++ b/.github/workflows/publish_maven.yaml
@@ -36,11 +36,13 @@ jobs:
       - name: Publish Packages
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: publish
+          arguments: |
+            publishLibraryPublicationToGithubRepository
+            -Pversion=${{ github.ref_name }}
           build-root-directory: lib/kotlin
         env:
 #          until we have a maven central repository
 #          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
 #          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           GH_PACKAGE_TOKEN: ${{ secrets.GH_PACKAGE_TOKEN }}
-          GH_RELEASE_ACTOR: ${{ secrets.GH_GITHUB_ACTOR }}
+          GH_RELEASE_ACTOR: ${{ secrets.GH_RELEASE_TOKEN }}
