--- a/.github/workflows/publish_npm.yaml
+++ b/.github/workflows/publish_npm.yaml
@@ -44,8 +44,9 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
         run: |
           cd lib/js
+          make build
           npm version ${{ github.ref_name }}
-          npm publish
+          npm publish ./dist
 
   publish-npm-registry:
     runs-on: ubuntu-latest
@@ -78,5 +79,6 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}      
         run: |
           cd lib/js
+          make build
           npm version ${{ github.ref_name }}
-          npm publish
+          npm publish ./dist
