--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@sanctumlabs/messageschema",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Shared message schemas for Sanctum Labs Platform",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,10 @@
   },
   "homepage": "https://gitlab.com/sanctumlabs/libraries/messageschema#readme",
   "dependencies": {
+    "@bufbuild/protobuf": "^1.3.0",
     "google-protobuf": "^3.21.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.1.6"
   }
 }
