--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,7 +114,7 @@ publish-npm:
     - echo @sanctumlabs:registry=https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/ > .npmrc
     - echo "//${CI_SERVER_HOST}/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=${CI_JOB_TOKEN}" >> .npmrc
     - npm version ${CI_COMMIT_TAG}
-    - NPM_TOKEN=${CI_JOB_TOKEN} npm publish ./dist
+    - NPM_TOKEN=${CI_JOB_TOKEN} npm publish
   only:
     - tags
 
