--- a/lib/js/package.json
+++ b/lib/js/package.json
@@ -21,6 +21,10 @@
     "url": "https://gitlab.com/sanctumlabs/libraries/messageschema/issues"
   },
   "homepage": "https://gitlab.com/sanctumlabs/libraries/messageschema#readme",
+  "type": "module",
+  "files": [
+    "dist/**"
+  ],
   "dependencies": {
     "@bufbuild/protobuf": "^1.3.0",
     "google-protobuf": "^3.21.2"
