--- a/lib/kotlin/gradle.properties
+++ b/lib/kotlin/gradle.properties
@@ -1,5 +1,7 @@
-version = 0.0.1
+version=0.0.1
 gitLabTokenName=Private-Token
 gitLabPrivateToken=Private-Token-Value
 gitlabGroupID=GROUP_ID
 gitlabProjectID=PROJECT_ID
+signingKey=SIGNING_KEY
+signingPassword=SIGNING_PASSWORD
