--- a/lib/kotlin/gradle.properties
+++ b/lib/kotlin/gradle.properties
@@ -4,4 +4,5 @@ gitLabPrivateToken=Private-Token-Value
 gitlabGroupID=GROUP_ID
 gitlabProjectID=PROJECT_ID
 signingKey=SIGNING_KEY
+signingKeyId=SIGNING_KEY_ID
 signingPassword=SIGNING_PASSWORD
