--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,7 @@ publish-maven:
   script:
     - cd lib/kotlin
     - ./gradlew -Pversion="${CI_COMMIT_TAG}" build 
-    - ./gradlew -PsigningKey=${SIGNING_KEY} -PsigningPassword=${SIGNING_PASSWORD} -Pversion="${CI_COMMIT_TAG}" -PgitlabProjectID="${CI_PROJECT_ID}" -PgitLabPrivateToken=${CI_PROJECT_ID} -PgitLabTokenName=Job-Token publishLibraryPublicationToGitlabRepository
+    - ./gradlew -PsigningKeyId=${SIGNING_KEY_ID} -PsigningKey=${SIGNING_KEY} -PsigningPassword=${SIGNING_PASSWORD} -Pversion="${CI_COMMIT_TAG}" -PgitlabProjectID="${CI_PROJECT_ID}" -PgitLabPrivateToken=${CI_PROJECT_ID} -PgitLabTokenName=Job-Token publishLibraryPublicationToGitlabRepository
   only:
     - tags
 
